Refactors Bonds to ETFs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 	<string name="app_name">LenaF(x)</string>
 	<string name="search_company">Search Company</string>
-	<string name="search_bonds">Search Bonds</string>
+	<string name="search_etfs">Search ETFs</string>
 	<string name="enter_ticker">Enter Ticker</string>
 	<string name="no_results">No Results</string>
 	<string name="index_name">Index Name</string>
