--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 	<string name="app_name">LenaF(x)</string>
-	<string name="search_company">Search Company</string>
+	<string name="search_company">Search Companies</string>
 	<string name="search_etfs">Search ETFs</string>
 	<string name="enter_ticker">Enter Ticker</string>
 	<string name="no_results">No Results</string>
